# VSR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
VSR/: CMakeLists.txt
VSR/include/: pch.h
VSR/src/: main.cpp
